syntax = "proto3";

option java_package = "cafe.adriel.verne.domain.proto";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;

message Settings {
    string editorFontFamily = 1;
    int32 editorFontSize = 2;
    int32 editorMarginSize = 3;
}
